Fix code block alignment to properly match container margins

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -3,7 +3,6 @@
 div.highlighter-rouge {
 	position: relative;
 	margin: 40px 0;
-	width: 100%;
 }
 
 .highlight {
